--- a/public_html/login.html
+++ b/public_html/login.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div class="login-container">
+        <div class="image-side">
+            <div class="overlay"></div>
+            <div class="image-content">
+                <h2>Welcome to Beauty Haven</h2>
+                <p>Discover your perfect beauty routine</p>
+            </div>
+        </div>   
         <div class="login-box">
             <div class="login-header">
                 <h2>Welcome Back</h2>
