--- a/public_html/register.html
+++ b/public_html/register.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div class="register-container">
+            <div class="image-side">
+                <div class="overlay"></div>
+                <div class="image-content">
+                    <h2>Join Our Beauty Community</h2>
+                    <p>Start your beauty journey today</p>
+                </div>
+            </div>
         <div class="register-box">
             <div class="register-header">
                 <h2>Create Account</h2>
@@ -24,11 +31,6 @@
                 <div class="form-group">
                     <i class="fas fa-envelope"></i>
                     <input type="email" name="email" placeholder="Email Address" required>
-                </div>
-
-                <div class="form-group">
-                    <i class="fas fa-phone"></i>
-                    <input type="tel" name="phone" placeholder="Phone Number">
                 </div>
 
                 <div class="form-group">
